# comp

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  server.js
app/: __init__.py  cache.py  config.py  database.py  db.py  ingest.py  main.py  models.py  scheduler.py  schemas.py
app/scrapers/: __init__.py
bs4/: __init__.py
config/: sites.json
dateutil/: __init__.py  parser.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: RaffleCard.jsx
frontend/src/hooks/: useRaffles.js
frontend/src/styles/: app.css  global.css
public/: app.js  index.html  styles.css
raffle_backend/: api.py  database.py  ingestion.py  main.py  models.py  repository.py  scheduler.py
raffles/: db.py  models.py  settings.py
requests/: __init__.py
scraper/: __init__.py  base.py  models.py  pipeline.py  runner.py  utils.py
scraper/sites/: __init__.py  raffle_site_a.py  raffle_site_b.py  rafflepress.py  shopify.py
scrapers/: __init__.py  base.py  config.py  example.py  playwright_fetcher.py  raffle_api.py  session.py  shopify.py  utils.py
scripts/: check_login_requirements.py  update_raffles.py
tests/: test_playwright_fetcher.py  test_raffle_api.py  test_rafflepress_scraper.py  test_shopify_scraper.py  test_utils.py
