[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raffle-dashboard"
version = "0.1.0"
description = "Raffle ingestion pipeline and FastAPI service for a raffle dashboard"
authors = [{name = "Kevin Reay"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.24.0",
    "python-dateutil>=2.8.2",
    "apscheduler>=3.10.4"
]

[project.scripts]
raffle-update = "scripts.update_raffles:main"
raffle-api = "raffle_backend.main:run"
